# 2024-LightDance-Editor

./: .gitignore  docker-compose.yml
editor-server/: .env.production  .gitignore  Cargo.toml
editor-server/.sqlx/: query-056de3f09491249860a869fea1e8b0093b23ff19debb02a934b600a65178c1b9.json  query-27f302c8fc4fb32028bf6907205fffc1b59af2923f6cedad47b1e8d375d3e3f7.json  query-2b5fa25ba6279799c70a558531a1c9afb5e93074ccf469f88059336aca8b208f.json  query-4428d997f739ba30d717739761e8a519bda7529d79399ac16e4ac57cbb4159c4.json  query-53b9a6ae0ca532059ca8e74c0018acb73ee024d9b740fb05ea0f598f25c14a23.json  query-540c0b36fa9287c394d848e9ca62af49b1a2fcf2ff52611fe5142e1f68b02c41.json  query-5eff9eda942fb74dd2865ecb1d47ebeedfdd7959a8c9678f60d317de50839b64.json  query-757d7748dacb1db1f566ce2fa419aa16d656d4cdb037b9b5d900a2808cdcb1b5.json  query-7fc8beb4f25156916a949dc6ba10a5294bc450d9bac9b1a3ab8c4c8088c85b1e.json  query-891c16cca731191b83bbdbaa705ded5eac172e9fd583383a8a71d9d2150c6942.json  query-eb3fe0f5bcb66c01de84e7d9e6ef85a1b2ed67c7d352cbda1afdb2b43d7834cc.json  query-ec217caf9a43772b29dd8dfd791c8946c9b8395f54e14d784157dc039aa6792a.json
editor-server/src/: main.rs
editor-server/src/db/: clients.rs  mod.rs
editor-server/src/db/types/: color.rs  mod.rs  user.rs
editor-server/src/graphql/: schema.graphql  schema.rs
editor-server/src/graphql/mutations/: color.rs
editor-server/src/graphql/queries/: color.rs
editor-server/src/server/: mod.rs  state.rs
editor-server/tests/: json_performance.rs
editor-server/tests/migrations/: 20230928100426_setup_benchmark.sql
(+6 files in other folders)
