[package]
name = "editor-server"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["prisma"]

[dependencies]
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
axum = "0.6.20"
dotenv = "0.15.0"
futures-channel = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
once_cell = "1.18.0"
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = "1.0.188"
serde_json = "1.0.107"
slab = "0.4.9"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio", "migrate"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

